src/UI/BoardNav/BoardNav.module.scss
@import '../../styles/_colors.scss';

.boardnav {
  display: flex;
  height: 150px;
  justify-content: space-between;
  img {
    height: 93%;
    width: 280px;
  }
  .sub-profile {
    margin: 20px;
    padding: 12px;
    border-radius: 24px;
    align-items: center;
    display: flex;
    margin-right: 20px;
    img {
      border-radius: 100%;
      height: 80px;
      width: 80px;
    }
    .actions {
      display: flex;
      flex-flow: row;
      flex-wrap: wrap;
      justify-content: center;
      margin: 7px;
      p {
        background-color: lightgray;
        border-radius: 33px;
        flex: 1 0 100%;
        margin: 3px auto;
      }
      button {
        padding: 8px;
        margin: auto 4px;
      }
    }
  }
}

